# rspl_neuron

./: .gitignore  README.md  pyproject.toml  rspl.py
benchmarks/: benchmark_rsp_rnn.py
tests/: test_rspl.py
