[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rspl_neuron"
version = "0.1.0"
authors = [
  { name = "Robert F. Dickerson", email = "rfdickerson@gmail.com" },
]
description = "A PyTorch implementation of the RSPL neuron for time series forecasting"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/rfdickerson/rspl_neuron"
Repository = "https://github.com/rfdickerson/rspl_neuron"